# qa-testing-agent

./: AGENT.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/qa_testing_agent/: __init__.py  cli.py  core.py
tests/: test_core.py
